--- a/memorivise/templates/resources.html
+++ b/memorivise/templates/resources.html
@@ -61,9 +61,9 @@
   }
 
   .icon-container img:hover {
-    opacity: 0.5;
+    opacity: 0.7;
     cursor: pointer;
-    transform: scale(1.2);
+    /* transform: scale(1.1); */
   }
 
   .icon-container figcaption {
