--- a/memorivise/templates/books.html
+++ b/memorivise/templates/books.html
@@ -29,22 +29,51 @@
         <a href="#" class="card-link">View more</a>
       </div>
     </div>
-    <div class="col-lg-4  card" style="width: 22rem" id="classes">
+    <!-- <div class="col-lg-4  card" style="width: 22rem" id="classes">
       <div class="card-body">
         <h4 class="card-title">Class 11</h4>
         <h6 class="card-subtitle mb-5 text-muted">10 Lessons | 8 Subjects</h6>
         <a href="#" class="card-link">View more</a>
       </div>
+    </div> -->
+    
+    <div class="col-lg-4  card" style="width: 22rem" id="classes">
+      <div class="card-body">
+        <h4 class="card-title">Class 11</h4>
+        <h6 class="card-subtitle mb-5 text-muted">10 Lessons | 8 Subjects</h6>
+        <a type="button" class="card-link" data-bs-toggle="modal" data-bs-target="#elevenModal">View more</a>
+      </div>
     </div>
+  
+      <div class="modal fade " id="elevenModal" tabindex="-1" aria-labelledby="elevenModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="elevenModalLabel">Faculty</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body text-center">
+              <a href="" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2">Science</a>
+              <a href="" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2">Management</a>
+              <a href="" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2">Education</a>
+              <a href="" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2">Commerce</a>
+            </div>
+            <!-- <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save Changes</button>
+            </div> -->
+          </div>
+        </div>
+      </div>
     <div class="col-lg-4  card" style="width: 22rem" id="classes">
       <div class="card-body">
         <h4 class="card-title">Class 12</h4>
         <h6 class="card-subtitle mb-5 text-muted">10 Lessons | 8 Subjects</h6>
-        <a type="button" class="card-link" data-bs-toggle="modal" data-bs-target="#tweleModal">View more</a>
+        <a type="button" class="card-link" data-bs-toggle="modal" data-bs-target="#twelveModal">View more</a>
       </div>
     </div>
   
-      <div class="modal fade " id="tweleModal" tabindex="-1" aria-labelledby="twelveModalLabel" aria-hidden="true">
+      <div class="modal fade " id="twelveModal" tabindex="-1" aria-labelledby="twelveModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
             <div class="modal-header">
