--- a/memorivise/templates/revise.html
+++ b/memorivise/templates/revise.html
@@ -37,7 +37,7 @@
             <p class="card-text card-desc" style="filter:blur(3px);">
                 {{ revision.description }}
             </p>
-            <a href="#" class="card-link">Revise</a>
+            <a class="card-link" id="revise_test" data-toggle="modal" data-target="#testModalCenter">Revise</a>
             <a href="revise/update/{{revision.id}}" class="card-link">Update</a>
             <a href="revise/delete/{{revision.id}}" class="card-link">Delete</a>
           </div>
