--- a/memorivise/templates/books.html
+++ b/memorivise/templates/books.html
@@ -44,7 +44,6 @@
         <a type="button" class="card-link" data-bs-toggle="modal" data-bs-target="#elevenModal">View more</a>
       </div>
     </div>
-<<<<<<< HEAD
   
       <div class="modal fade " id="elevenModal" tabindex="-1" aria-labelledby="elevenModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
@@ -66,48 +65,20 @@
           </div>
         </div>
       </div>
-=======
     
->>>>>>> 696bf1aaee10e891c699524134884183381c3bb7
-    <div class="col-lg-4  card" style="width: 22rem" id="classes">
-      <div class="card-body">
-        <h4 class="card-title">Class 12</h4>
-        <h6 class="card-subtitle mb-5 text-muted">10 Lessons | 8 Subjects</h6>
-        <a type="button" class="card-link" data-bs-toggle="modal" data-bs-target="#twelveModal">View more</a>
+      <div class="col-lg-4  card" style="width: 22rem" id="classes">
+        <div class="card-body">
+          <h4 class="card-title">Class 12</h4>
+          <h6 class="card-subtitle mb-5 text-muted">10 Lessons | 8 Subjects</h6>
+          <a type="button" class="card-link" data-bs-toggle="modal" data-bs-target="#twelveModal">View more</a>
+        </div>
       </div>
-    </div>
-<<<<<<< HEAD
-  
+
       <div class="modal fade " id="twelveModal" tabindex="-1" aria-labelledby="twelveModalLabel" aria-hidden="true">
-=======
-  <br>
-    <div class="col-lg-4  card" style="width: 22rem" id="classes">
-      <div class="card-body">
-        <h4 class="card-title">Olympiad Questions</h4>
-        <h6 class="card-subtitle mb-5 text-muted">Previous | 5 Subjects</h6>
-        <a type="button" class="card-link" data-bs-toggle="modal" data-bs-target="#olympiadModal">View more</a>
-      </div>
-    </div>
-
-    <div class="modal fade " id="olympiadModal" tabindex="-1" aria-labelledby="olympiadModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="olympiadModalLabel">Faculty</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body text-center">
-            <a href="/physics" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2">Physics</a>
-            <a href="" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2">Chemistry</a>
-            <a href="/biology" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2">Biology</a>
-          </div>
-
-      <div class="modal fade " id="tweleModal" tabindex="-1" aria-labelledby="twelveModalLabel" aria-hidden="true">
->>>>>>> 696bf1aaee10e891c699524134884183381c3bb7
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="twelveModalLabel">Faculty</h5>
+              <h5 class="modal-title" id="elevenModalLabel">Faculty</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body text-center">
@@ -116,7 +87,6 @@
               <a href="" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2">Education</a>
               <a href="" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2">Commerce</a>
             </div>
-            
             <!-- <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
               <button type="button" class="btn btn-primary">Save Changes</button>
@@ -124,6 +94,37 @@
           </div>
         </div>
       </div>
+
+      <br>
+
+      <div class="col-lg-4  card" style="width: 22rem" id="classes">
+        <div class="card-body">
+          <h4 class="card-title">Olympiad Questions</h4>
+          <h6 class="card-subtitle mb-5 text-muted">Previous | 3 Subjects</h6>
+          <a type="button" class="card-link" data-bs-toggle="modal" data-bs-target="#olympiadModal">View more</a>
+        </div>
+      </div>
+
+      <div class="modal fade " id="olympiadModal" tabindex="-1" aria-labelledby="olympiadModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="elevenModalLabel">Faculty</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body text-center">
+              <a href="/physics" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2">Physics</a>
+              <a href="" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2">Chemistry</a>
+              <a href="/biology" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2">Biology</a>
+            </div>
+            <!-- <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save Changes</button>
+            </div> -->
+          </div>
+        </div>
+      </div>
+
   </div>
   <!-- <img src="..\static\img\books\stand.png" class="stand" width="100%" /> -->
   <!-- <h2>Olympiad Questions</h2> -->
