--- a/memorivise/templates/memorivise.html
+++ b/memorivise/templates/memorivise.html
@@ -43,9 +43,67 @@
                   <p class="card-text card-desc" style="filter:blur(3px);">
                       {{ revision.document }}
                   </p>
-                  <a href="#" class="card-link">Revise</a>
+                  <a
+                  class="card-link"
+                  id="revise_test"
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  data-toggle="modal"
+                  data-target="#exampleModal"
+                  style="cursor:pointer"
+                  >Revise</a
+                >
                   <a href="memorivise/update/{{revision.id}}" class="card-link">Update</a>
                   <a href="memorivise/delete/{{revision.id}}" class="card-link">Delete</a>
+                  <div
+                class="modal fade"
+                id="exampleModal"
+                tabindex="-1"
+                role="dialog"
+                aria-labelledby="exampleModalCenterTitle"
+                aria-hidden="true"
+              >
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalCenterTitle">
+                        Revise Test
+                      </h5>
+                      <button
+                        type="button"
+                        class="btn-close"
+                        data-bs-dismiss="modal"
+                        aria-label="Close"
+                      ></button>
+                    </div>
+                    <div class="modal-body">
+                      <form>
+                        <div class="form-group">
+                          <label for="exampleFormControlTextarea1"
+                            >Enter the content to revise</label
+                          >
+                          <textarea
+                            class="form-control"
+                            id="exampleFormControlTextarea1"
+                            rows="3"
+                          ></textarea>
+                        </div>
+                      </form>
+                    </div>
+                    <div class="modal-footer">
+                      <!-- <button
+                        type="button"
+                        class="btn btn-secondary"
+                        data-dismiss="modal"
+                      >
+                        Close
+                      </button> -->
+                      <button type="button" class="btn btn-primary">
+                        Test
+                      </button>
+                    </div>
+                  </div>
+                  </div>
                 </div>
               </div>
             </div>
