update memorivise test form

--- a/memorivise/templates/memorivise.html
+++ b/memorivise/templates/memorivise.html
@@ -89,19 +89,19 @@
                             name="memorivise_test"
                           ></textarea>
                         </div>
+                        <div class="modal-footer">
+                          <!-- <button
+                            type="button"
+                            class="btn btn-secondary"
+                            data-dismiss="modal"
+                          >
+                            Close
+                          </button> -->
+                          <button type="submit" class="btn btn-primary" id="testMemoriviseSubmit">
+                            Test
+                          </button>
+                        </div>
                       </form>
-                    </div>
-                    <div class="modal-footer">
-                      <!-- <button
-                        type="button"
-                        class="btn btn-secondary"
-                        data-dismiss="modal"
-                      >
-                        Close
-                      </button> -->
-                      <button type="button" class="btn btn-primary" id="testReviseSubmit">
-                        Test
-                      </button>
                     </div>
                   </div>
                   </div>
