--- a/memorivise/templates/update.html
+++ b/memorivise/templates/update.html
@@ -1,36 +1,8 @@
 {% extends 'base.html' %} {% block title %}
 <title>Update - Memorivise</title>
 {% endblock %} {% block body %}
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="../templates/index.html">Memorivise</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
-
-    <form class="d-flex" role="search">
-      <input
-        class="form-control me-2"
-        type="search"
-        placeholder="Search"
-        aria-label="Search"
-      />
-      <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
-    <!-- </div> -->
-  </div>
-</nav>
 <div class="container">
-  <form class="mt-5" method="POST" action="/update/{{update.id}}">
+  <form class="mt-5" method="POST" action="/revise/update/{{update.id}}">
     <div class="mb-3">
       <label for="title" class="form-label">Title</label>
       <input
