--- a/memorivise/templates/books.html
+++ b/memorivise/templates/books.html
@@ -2,12 +2,10 @@
 <title>Books</title>
 {% endblock title%} {% block body %}
 <div class="container">
-  <header>
-    <h1 class="text-center">Memorivise books</h1>
-  </header>
   <hr />
   <h2 class="text-center">School Books</h2>
-  <div class="container-fluid row mt-4 d-flex gap-3 justify-content-center">
+  <hr />
+  <div class="container-fluid row py-4 d-flex gap-3 justify-content-center">
     <div class="col-lg-4 card" style="width: 22rem" id="classes">
       <div class="card-body">
         <h4 class="card-title">Class 8</h4>
@@ -29,13 +27,6 @@
         <a href="#" class="card-link">View more</a>
       </div>
     </div>
-    <!-- <div class="col-lg-4  card" style="width: 22rem" id="classes">
-      <div class="card-body">
-        <h4 class="card-title">Class 11</h4>
-        <h6 class="card-subtitle mb-5 text-muted">10 Lessons | 8 Subjects</h6>
-        <a type="button" class="card-link" data-bs-toggle="modal" data-bs-target="#tweleModal">View more</a>
-      </div>
-    </div> -->
 
     <div class="col-lg-4 card" style="width: 22rem" id="classes">
       <div class="card-body">
@@ -91,26 +82,51 @@
       </div>
     </div>
 
-    <div class="col-lg-4  card" style="width: 22rem" id="classes">
+    <div class="col-lg-4 card" style="width: 22rem" id="classes">
       <div class="card-body">
         <h4 class="card-title">Class 12</h4>
         <h6 class="card-subtitle mb-5 text-muted">10 Lessons | 8 Subjects</h6>
-        <a type="button" class="card-link" data-bs-toggle="modal" data-bs-target="#twelveModal">View more</a>
+        <a
+          type="button"
+          class="card-link"
+          data-bs-toggle="modal"
+          data-bs-target="#twelveModal"
+          >View more</a
+        >
       </div>
     </div>
 
-    <div class="modal fade " id="twelveModal" tabindex="-1" aria-labelledby="twelveModalLabel" aria-hidden="true">
+    <div
+      class="modal fade"
+      id="twelveModal"
+      tabindex="-1"
+      aria-labelledby="twelveModalLabel"
+      aria-hidden="true"
+    >
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="elevenModalLabel">Faculty</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
           </div>
           <div class="modal-body text-center">
-            <a href="/science" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2">Science</a>
-            <a href="" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2">Management</a>
-            <a href="" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2">Education</a>
-            <a href="" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2">Commerce</a>
+            <a href="/science" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2"
+              >Science</a
+            >
+            <a href="" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2"
+              >Management</a
+            >
+            <a href="" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2"
+              >Education</a
+            >
+            <a href="" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2"
+              >Commerce</a
+            >
           </div>
           <!-- <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -120,27 +136,50 @@
       </div>
     </div>
 
-    <br>
-
-    <div class="col-lg-4  card" style="width: 22rem" id="classes">
+    <div class="col-lg-4 card" style="width: 22rem" id="classes">
       <div class="card-body">
         <h4 class="card-title">Olympiad Questions</h4>
         <h6 class="card-subtitle mb-5 text-muted">Previous | 3 Subjects</h6>
-        <a type="button" class="card-link" data-bs-toggle="modal" data-bs-target="#olympiadModal">View more</a>
+        <a
+          type="button"
+          class="card-link"
+          data-bs-toggle="modal"
+          data-bs-target="#olympiadModal"
+          >View more</a
+        >
       </div>
     </div>
 
-    <div class="modal fade " id="olympiadModal" tabindex="-1" aria-labelledby="olympiadModalLabel" aria-hidden="true">
+    <div
+      class="modal fade"
+      id="olympiadModal"
+      tabindex="-1"
+      aria-labelledby="olympiadModalLabel"
+      aria-hidden="true"
+    >
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="elevenModalLabel">Faculty</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
           </div>
           <div class="modal-body text-center">
-            <a href="/physics" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2">Physics</a>
-            <a href="/chemistry" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2">Chemistry</a>
-            <a href="/biology" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2">Biology</a>
+            <a href="/physics" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2"
+              >Physics</a
+            >
+            <a
+              href="/chemistry"
+              class="btn btn-secondary col-lg-5 mx-2 my-2 py-2"
+              >Chemistry</a
+            >
+            <a href="/biology" class="btn btn-secondary col-lg-5 mx-2 my-2 py-2"
+              >Biology</a
+            >
           </div>
           <!-- <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -149,10 +188,10 @@
         </div>
       </div>
     </div>
-          </div>
-          <!-- <img src="..\static\img\books\stand.png" class="stand" width="100%" /> -->
-          <!-- <h2>Olympiad Questions</h2> -->
-          <!-- <div class="books-slider">
+  </div>
+  <!-- <img src="..\static\img\books\stand.png" class="stand" width="100%" /> -->
+  <!-- <h2>Olympiad Questions</h2> -->
+  <!-- <div class="books-slider">
     <div class="icon-container">
       <figure>
         <a href="/physics"><img src="..\static\img\books\docccc.jpg" /></a>
@@ -180,24 +219,19 @@
         /></a>
         <figcaption class="my-2"><b>Economics Olympiad</b></figcaption>
       </figure>
-    </div>
-  </div> -->
-          <!-- <img src="..\static\img\books\stand.png" class="stand" width="100%" /> -->
-
-          <style>
-            #classes {
-              transition: box-shadow 0.2s;
-            }
-
-            #classes:hover {
-              /* transform: translate(0, -0.5rem); */
-              box-shadow: 2px 3px 7px 1px #2b2b2b34;
-            }
-          </style>
-
-          {% endblock body %}
-        </div>
-      </div>
-    </div>
-  </div>
+    </div>-->
 </div>
+<!-- <img src="..\static\img\books\stand.png" class="stand" width="100%" /> -->
+
+<style>
+  #classes {
+    transition: box-shadow 0.2s;
+  }
+
+  #classes:hover {
+    /* transform: translate(0, -0.5rem); */
+    box-shadow: 2px 3px 7px 1px #2b2b2b34;
+  }
+</style>
+
+{% endblock body %}
