update chemistry UI

--- a/memorivise/templates/chemistry.html
+++ b/memorivise/templates/chemistry.html
@@ -3,87 +3,121 @@
 {% endblock title%} {% block body %}
 
 <body>
-    <div class="container">
-        <header>
-            <h1 class="text-center">IChO Problems and Solutions</h1>
-        </header>
-        <hr />
-        <div class="container-fluid row mt-4 d-flex gap-3 justify-content-center">
-            <div class="col-lg-4 card" style="width: 22rem" id="classes">
-                <div class="card-body">
-                    <h4 class="card-title">IChO, 2020</h4>
-                    <h6 class="card-subtitle mb-5 text-muted">Istanbul, Turkey</h6>
-                    <a href="..\static\document\chemistry\IChO-2020-Problems.pdf" class="card-link">Theoretical
-                        Problem</a><br>
-                    <a href="#" class="card-link"> Practical problem</a>
-                </div>
-            </div>
-
-            <div class="col-lg-4 card" style="width: 22rem" id="classes">
-                <div class="card-body">
-                    <h4 class="card-title">IChO, 2019</h4>
-                    <h6 class="card-subtitle mb-5 text-muted">Paris, France</h6>
-                    <a href="..\static\document\chemistry\IChO2019_TheoreticalTasks_official.pdf"
-                        class="card-link">Theoretical Problem</a><br>
-                    <a href="..\static\document\chemistry\IChO2019_PracticalTasks_official.pdf" class="card-link">
-                        Practical problem</a>
-                </div>
-            </div>
-
-            <div class="col-lg-4 card" style="width: 22rem" id="classes">
-                <div class="card-body">
-                    <h4 class="card-title">IChO, 2018</h4>
-                    <h6 class="card-subtitle mb-5 text-muted">Bratislava, Slovakia and Prague, Czech Republic</h6>
-                    <a href="..\static\document\chemistry\Theoretical-Problems-50-IChO_final_sol.pdf"
-                        class="card-link">Theoretical Problem</a><br>
-                    <a href="..\static\document\chemistry\Practical-Problems-50-IChO_final_sol.pdf" class="card-link">
-                        Practical problem</a>
-                </div>
-            </div>
-
-            <div class="col-lg-4 card" style="width: 22rem" id="classes">
-                <div class="card-body">
-                    <h4 class="card-title">IChO, 2017</h4>
-                    <h6 class="card-subtitle mb-5 text-muted">Nakhon Pathom, Thailand</h6>
-                    <a href="..\static\document\chemistry\IChO2017_TheoreticalTasks.pdf" class="card-link">Theoretical
-                        Problem</a><br>
-                    <a href="..\static\document\chemistry\IChO2017_PracticalTasks.pdf" class="card-link"> Practical
-                        problem</a>
-                </div>
-            </div>
-
-            <div class="col-lg-4 card" style="width: 22rem" id="classes">
-                <div class="card-body">
-                    <h4 class="card-title">IChO, 2016</h4>
-                    <h6 class="card-subtitle mb-5 text-muted">Tbilisi, Georgia</h6>
-                    <a href="..\static\document\chemistry\IChO2016_theory_public.pdf" class="card-link">Theoretical
-                        Problem</a><br>
-                    <a href="..\static\document\chemistry\IChO2016_practical_public.pdf" class="card-link"> Practical
-                        problem</a>
-                </div>
-            </div>
-
-            <div class="col-lg-4 card" style="width: 22rem" id="classes">
-                <div class="card-body">
-                    <h4 class="card-title">IChO, 2015</h4>
-                    <h6 class="card-subtitle mb-5 text-muted">Baku, Azerbaijan</h6>
-                    <a href="..\static\document\chemistry\47th_IChO-Theoretical_Official_English_Version_for_students_final.pdf"
-                        class="card-link">Theoretical Problem</a><br>
-                    <a href="#" class="card-link"> Practical problem</a>
-                </div>
-            </div>
-
+  <div class="container">
+    <hr />
+    <h2 class="text-center">IChO Problems and Solutions</h2>
+    <hr />
+    <div class="container-fluid row py-4 mb-5 d-flex gap-3 justify-content-center">
+      <div class="col-lg-4 card" style="width: 22rem" id="classes">
+        <div class="card-body">
+          <h4 class="card-title">IChO, 2020</h4>
+          <h6 class="card-subtitle mb-5 text-muted">Istanbul, Turkey</h6>
+          <a
+            href="..\static\document\chemistry\IChO-2020-Problems.pdf"
+            class="card-link"
+            >Theoretical Problem</a
+          ><br />
+          <a href="#" class="card-link"> Practical problem</a>
         </div>
+      </div>
+
+      <div class="col-lg-4 card" style="width: 22rem" id="classes">
+        <div class="card-body">
+          <h4 class="card-title">IChO, 2019</h4>
+          <h6 class="card-subtitle mb-5 text-muted">Paris, France</h6>
+          <a
+            href="..\static\document\chemistry\IChO2019_TheoreticalTasks_official.pdf"
+            class="card-link"
+            >Theoretical Problem</a
+          ><br />
+          <a
+            href="..\static\document\chemistry\IChO2019_PracticalTasks_official.pdf"
+            class="card-link"
+          >
+            Practical problem</a
+          >
+        </div>
+      </div>
+
+      <div class="col-lg-4 card" style="width: 22rem" id="classes">
+        <div class="card-body">
+          <h4 class="card-title">IChO, 2018</h4>
+          <h6 class="card-subtitle mb-5 text-muted">
+            Bratislava, Slovakia and Prague, Czech Republic
+          </h6>
+          <a
+            href="..\static\document\chemistry\Theoretical-Problems-50-IChO_final_sol.pdf"
+            class="card-link"
+            >Theoretical Problem</a
+          ><br />
+          <a
+            href="..\static\document\chemistry\Practical-Problems-50-IChO_final_sol.pdf"
+            class="card-link"
+          >
+            Practical problem</a
+          >
+        </div>
+      </div>
+
+      <div class="col-lg-4 card" style="width: 22rem" id="classes">
+        <div class="card-body">
+          <h4 class="card-title">IChO, 2017</h4>
+          <h6 class="card-subtitle mb-5 text-muted">Nakhon Pathom, Thailand</h6>
+          <a
+            href="..\static\document\chemistry\IChO2017_TheoreticalTasks.pdf"
+            class="card-link"
+            >Theoretical Problem</a
+          ><br />
+          <a
+            href="..\static\document\chemistry\IChO2017_PracticalTasks.pdf"
+            class="card-link"
+          >
+            Practical problem</a
+          >
+        </div>
+      </div>
+
+      <div class="col-lg-4 card" style="width: 22rem" id="classes">
+        <div class="card-body">
+          <h4 class="card-title">IChO, 2016</h4>
+          <h6 class="card-subtitle mb-5 text-muted">Tbilisi, Georgia</h6>
+          <a
+            href="..\static\document\chemistry\IChO2016_theory_public.pdf"
+            class="card-link"
+            >Theoretical Problem</a
+          ><br />
+          <a
+            href="..\static\document\chemistry\IChO2016_practical_public.pdf"
+            class="card-link"
+          >
+            Practical problem</a
+          >
+        </div>
+      </div>
+
+      <div class="col-lg-4 card" style="width: 22rem" id="classes">
+        <div class="card-body">
+          <h4 class="card-title">IChO, 2015</h4>
+          <h6 class="card-subtitle mb-5 text-muted">Baku, Azerbaijan</h6>
+          <a
+            href="..\static\document\chemistry\47th_IChO-Theoretical_Official_English_Version_for_students_final.pdf"
+            class="card-link"
+            >Theoretical Problem</a
+          ><br />
+          <a href="#" class="card-link"> Practical problem</a>
+        </div>
+      </div>
     </div>
+  </div>
 </body>
 <style>
-    #classes {
-        transition: box-shadow 0.2s;
-    }
+  #classes {
+    transition: box-shadow 0.2s;
+  }
 
-    #classes:hover {
-        /* transform: translate(0, -0.5rem); */
-        box-shadow: 2px 3px 7px 1px #2b2b2b34;
-    }
+  #classes:hover {
+    /* transform: translate(0, -0.5rem); */
+    box-shadow: 2px 3px 7px 1px #2b2b2b34;
+  }
 </style>
 {% endblock body %}
