--- a/memorivise/templates/resources.html
+++ b/memorivise/templates/resources.html
@@ -19,11 +19,11 @@
       <figcaption><b>Books and Notes</b></figcaption>
     </figure>
     <figure>
-      <a href="#"><img src="..\static\img\books\learntech.jpg"></a>
+      <a href="/learning"><img src="..\static\img\books\learntech.jpg"></a>
       <figcaption><b>Learning technique</b></figcaption>
     </figure>
     <figure>
-      <a href="#"><img src="..\static\img\books\stgm21.jpg"></a>
+      <a href="/studygames"><img src="..\static\img\books\stgm21.jpg"></a>
       <figcaption><b>Study games</b></figcaption>
     </figure>
   </div>
