wrong words showing

--- a/memorivise/templates/contact.html
+++ b/memorivise/templates/contact.html
@@ -5,7 +5,7 @@
   <div class="author-contact my-3 text-center">
     <h1 class="muted">Contact Us</h1>
     <div class="authors muted">
-      <a href="http://linkedin.com/in/" class="text-muted">
+      <a href="https://www.linkedin.com/in/raushn-pandit-660b39250/" class="text-muted">
         Raushan Pandit
     </a>
     <span>|</span>
