update resource menu

--- a/memorivise/templates/base.html
+++ b/memorivise/templates/base.html
@@ -57,11 +57,12 @@
                 <li><hr class="dropdown-divider" /></li>
                 <li>
                   <!-- <a class="dropdown-item" >Resources</a> -->
-                  <a class="dropdown-item dropdown-toggle" id="resource-drop" href="/resources">Resources</a>
+                  <a class="dropdown-item dropdown-toggle" id="resource-drop">Resources</a>
                   <div class="dropdown-submenu" >
                     <ul class="dropdown-menu" id="resource-dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Submenu item 1</a></li>
-                      <li><a class="dropdown-item" href="#">Submenu item 2</a></li>
+                      <li><a class="dropdown-item" href="/books">Books & Notes</a></li>
+                      <li><a class="dropdown-item" href="/learning">Learning Techniques</a></li>
+                      <li><a class="dropdown-item" href="/studygames">Games</a></li>
                     </ul>
                   </div>
                 </li> 
