--- a/memorivise/templates/books.html
+++ b/memorivise/templates/books.html
@@ -138,6 +138,14 @@
 
     <div class="col-lg-4 card" style="width: 22rem" id="classes">
       <div class="card-body">
+        <h4 class="card-title">Self Learning Books</h4>
+        <h6 class="card-subtitle mb-5 text-muted">Personal development | Finance</h6>
+        <a href="/personalbook" class="card-link">View more</a>
+      </div>
+    </div>
+
+    <div class="col-lg-4 card" style="width: 22rem" id="classes">
+      <div class="card-body">
         <h4 class="card-title">Olympiad Questions</h4>
         <h6 class="card-subtitle mb-5 text-muted">Previous | 3 Subjects</h6>
         <a
@@ -185,6 +193,7 @@
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             <button type="button" class="btn btn-primary">Save Changes</button>
           </div> -->
+
         </div>
       </div>
     </div>
