update home page

--- a/memorivise/templates/index.html
+++ b/memorivise/templates/index.html
@@ -4,7 +4,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-6 px-4 d-flex flex-column justify-content-center">
+    <div class="col-lg-6 px-4 mt-3 d-flex flex-column justify-content-center">
       <h1 class="fw-bold fs-1">Memorivise</h1>
       <p class="mt-2">
         A new way for you to keep track of, and revise your learnings. Just keep
@@ -19,7 +19,7 @@
         Get Started
       </a>
     </div>
-    <div class="col-lg-6 pt-5">
+    <div class="col-lg-6 pt-5 d-lg-block d-md-block d-xl-block d-xxl-block d-none">
       <img
         class="img-fluid"
         style="width: 90%"
